k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: api-server
  template:
    metadata:
      labels:
        component: api-server
    spec:
      containers:
        - name: server
          image: mananparuthi/multi-server
          ports:
            - containerPort: 5000
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"


# kind: Secret => An object type Used to Securely stores a piece of information in the cluster, such as a database password, an API key, etc
# Using imperative command instead of making a config file for secret (creating manually even in production environment)
# Creating a secret for postgres password using imperative command on CLI
#   => kubectl create <object-type> <type-of-secret> <secret-name> --from-literal key=value => Syntax
#   => kubectl create secret generic pgpassword --from-literal PGPASSWORD=12345asdf
