k8s/postgres-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-cluster-ip-service
spec:
  type: ClusterIP # Exposes a set of pods to other objects in the cluster (only accessible from within the cluster)
  selector:
    component: postgres # Selects all pods with the label 'component: postgres' (from k8s/postgres-deployment.yaml)
  ports:
    - port: 5432 # for another pod or another container inside our application to communicate with this container (postgres container)
      targetPort: 5432 # identical to the containerPort: 5432 in the postgres-deployment.yaml file ; port inside the container/pod to forward the traffic to
