k8s/server-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-cluster-ip-service
spec:
  type: ClusterIP # Exposes a set of pods to other objects in the cluster (only accessible from within the cluster)
  selector:
    component: api-server # Selects all pods with the label 'component: api-server' (from k8s/server-deployment.yaml)
  ports:
    - port: 5000 # for another pod or another container inside our application to communicate with this container (server container)
      targetPort: 5000 # identical to the containerPort: 5000 in the server-deployment.yaml file ; port inside the container/pod to forward the traffic to
